external-crates/move/crates/move-compiler/tests/development/enums/matching/nesting_with_phantoms.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/matching/nesting_with_phantoms.move:2:17
  │
2 │     public enum X {
  │                 ^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

error[E13003]: feature is under active development
  ┌─ tests/development/enums/matching/nesting_with_phantoms.move:9:17
  │
9 │     public enum Y {
  │                 ^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

error[E13003]: feature is under active development
   ┌─ tests/development/enums/matching/nesting_with_phantoms.move:22:17
   │
22 │     public enum PE<phantom T> {
   │                 ^^ Enums are not supported in bytecode.
   │
   = This feature is currently in development.

error[E13003]: feature is under active development
   ┌─ tests/development/enums/matching/nesting_with_phantoms.move:30:17
   │
30 │     public enum NPE<phantom T> {
   │                 ^^^ Enums are not supported in bytecode.
   │
   = This feature is currently in development.

